removed negative margin to prevent body content overlapping the footer

--- a/istopics/css/istopics.css
+++ b/istopics/css/istopics.css
@@ -16,7 +16,7 @@ height: 100%;
 min-height: 100%;
 height: auto !important;
 height: 100%;
-margin: 0 auto -4em;
+margin: 0 auto;
 }
 
 .footer, .push {
